; ModuleID = '/home/carl/AnghaBench/mpv/ta/extr_ta.c_ta_dbg_check_header.c'
source_filename = "/home/carl/AnghaBench/mpv/ta/extr_ta.c_ta_dbg_check_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ta_header = type { i64 }

@CANARY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ta_header*)* @ta_dbg_check_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ta_dbg_check_header(%struct.ta_header* %0) #0 {
  %2 = alloca %struct.ta_header*, align 8
  store %struct.ta_header* %0, %struct.ta_header** %2, align 8
  %3 = load %struct.ta_header*, %struct.ta_header** %2, align 8
  %4 = icmp ne %struct.ta_header* %3, null
  br i1 %4, label %5, label %13

5:                                                ; preds = %1
  %6 = load %struct.ta_header*, %struct.ta_header** %2, align 8
  %7 = getelementptr inbounds %struct.ta_header, %struct.ta_header* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @CANARY, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  br label %13

13:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
